#----------------------------------------------------------------
#
#  configure.ac
#
#  Autoconf source file for the sgraph "supergraph"
#  for BLT graph widgets.
#
#  This file, along with aclocal, autoconf, Makefile.am,
#  and automake can produce a highly functional configuration
#  script and Makefile.
#
#  Bob Techentin
#  November 17, 2003
#
#  Copyright 2003-2004 Mayo Foundation.  All Rights Reserved
#  $Id: configure.ac,v 1.2 2004/02/10 16:05:40 techenti Exp $
#
#----------------------------------------------------------------


#----------------------------------------------------------------
#  Declare the package name and version.
#  All the bouquets and brickbats go to Sharon. :-)
#----------------------------------------------------------------
AC_INIT(SGRAPH, 1.0, zahn.sharon@mayo.edu)

#----------------------------------------------------------------
#  Give autoconf a point of reference, and tell it that
#  we're going to use automake later.
#----------------------------------------------------------------
AC_CONFIG_SRCDIR
AM_INIT_AUTOMAKE(sgraph, 1.0)


#----------------------------------------------------------------
#  Don't bother checking for host type, libraries, or 
#  header file variations, as we're just dealing
#  with highly portable scripts at this level.
#----------------------------------------------------------------

AC_CONFIG_FILES([Makefile])
AC_OUTPUT






